首页功能完成

--- a/public/admin/first.html
+++ b/public/admin/first.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>系统管理-首页</title>
+    <title>系统管理-一级分类</title>
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
@@ -37,8 +37,8 @@
                         <span class='glyphicon glyphicon-th-list'></span>
                         分类管理    
                     </a>
-                    <div class="cate" style='display:none;'>
-                        <a href="first.html">一级菜单</a>
+                    <div class="cate" style='display:block;'>
+                        <a class='now' href="first.html">一级菜单</a>
                         <a href="second.html">二级菜单</a>
                     </div>
                 </li>
@@ -62,14 +62,9 @@
             <div class="container-fluid">
                 <ol class="breadcrumb">
                     <li><a href="#">管理系统</a></li>
-                    <li class="active">首页</li>
+                    <li><a href="#">分类管理</a></li>
+                    <li class="active">一级分类</li>
                 </ol>
-                <div class="lt_main_left pull-left">
-                    <div class="lt_main_bar"></div>
-                </div>
-                <div class="lt_main_right pull-right">
-                    <div class="lt_main_pie"></div>
-                </div>
             </div>
         </div>
     </div>
@@ -102,7 +97,6 @@
     <script src='./lib/bootstrap/js/bootstrap.js'></script>
     <script src='./lib/bootstrap-validator/js/bootstrapValidator.js'></script>
     <script src='./lib/nprogress/nprogress.js'></script>
-    <script src='./lib/echarts/echarts.min.js'></script>
     <script src='./js/common.js'></script>
     <script src='./js/index.js'></script>
 
