--- a/public/admin/user.html
+++ b/public/admin/user.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>系统管理-首页</title>
+    <title>系统管理-用户管理</title>
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
@@ -27,7 +27,7 @@
         <div class="lt_nav">
             <ul>
                 <li>
-                    <a href="user.html">
+                    <a class='now' href="user.html">
                         <span class='glyphicon glyphicon-user'></span>
                         用户管理    
                     </a>
@@ -62,18 +62,11 @@
             <div class="container-fluid">
                 <ol class="breadcrumb">
                     <li><a href="#">管理系统</a></li>
-                    <li class="active">首页</li>
+                    <li class="active">用户管理</li>
                 </ol>
-                <div class="lt_main_left pull-left">
-                    <div class="lt_main_bar"></div>
-                </div>
-                <div class="lt_main_right pull-right">
-                    <div class="lt_main_pie"></div>
-                </div>
             </div>
         </div>
     </div>
-
 
     <!-- 退出部分的模态框 -->
     <div class="modal fade" tabindex="-1">
@@ -102,7 +95,6 @@
     <script src='./lib/bootstrap/js/bootstrap.js'></script>
     <script src='./lib/bootstrap-validator/js/bootstrapValidator.js'></script>
     <script src='./lib/nprogress/nprogress.js'></script>
-    <script src='./lib/echarts/echarts.min.js'></script>
     <script src='./js/common.js'></script>
     <script src='./js/index.js'></script>
 
