--- a/public/admin/product.html
+++ b/public/admin/product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>系统管理-首页</title>
+    <title>系统管理-商品管理</title>
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
@@ -43,7 +43,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="product.html">
+                    <a class='now' href="product.html">
                         <span class='glyphicon glyphicon-tags'></span>
                         商品管理    
                     </a>
@@ -62,14 +62,8 @@
             <div class="container-fluid">
                 <ol class="breadcrumb">
                     <li><a href="#">管理系统</a></li>
-                    <li class="active">首页</li>
+                    <li class="active">商品管理</li>
                 </ol>
-                <div class="lt_main_left pull-left">
-                    <div class="lt_main_bar"></div>
-                </div>
-                <div class="lt_main_right pull-right">
-                    <div class="lt_main_pie"></div>
-                </div>
             </div>
         </div>
     </div>
@@ -102,7 +96,6 @@
     <script src='./lib/bootstrap/js/bootstrap.js'></script>
     <script src='./lib/bootstrap-validator/js/bootstrapValidator.js'></script>
     <script src='./lib/nprogress/nprogress.js'></script>
-    <script src='./lib/echarts/echarts.min.js'></script>
     <script src='./js/common.js'></script>
     <script src='./js/index.js'></script>
 
