用户管理页面基本功能完成

--- a/public/admin/user.html
+++ b/public/admin/user.html
@@ -64,6 +64,25 @@
                     <li><a href="#">管理系统</a></li>
                     <li class="active">用户管理</li>
                 </ol>
+                <div class="lt_main_table">
+                    <table class="table table-bordered table-hover">
+                        <thead>
+                            <tr>
+                                <td width='10%'>序号</td>
+                                <td width='30%'>用户名</td>
+                                <td width='30%'>手机号</td>
+                                <td width='20%'>状态</td>
+                                <td width='10%'>操作</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                    <div class="paginator text-right">
+                        <ul class="pagination"></ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -78,8 +97,7 @@
                 </div>
                 <div class="modal-body">
                     <p class='text-danger'>
-                        <span class='glyphicon glyphicon-info-sign'></span>
-                        您确定要退出后台管理系统吗？
+                        <span class='glyphicon glyphicon-info-sign'></span> 您确定要退出后台管理系统吗？
                     </p>
                 </div>
                 <div class="modal-footer">
@@ -89,13 +107,56 @@
             </div>
         </div>
     </div>
-   
 
-    <script src='./lib/jquery/jquery.js'></script>
-    <script src='./lib/bootstrap/js/bootstrap.js'></script>
-    <script src='./lib/bootstrap-validator/js/bootstrapValidator.js'></script>
-    <script src='./lib/nprogress/nprogress.js'></script>
-    <script src='./js/common.js'></script>
+<!-- 禁用用户的模态框 -->
+<div class="modal fade" tabindex="-1" id='user_modal'>
+    <div class="modal-dialog">
+        <div class="modal-content modal-sm">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                <h4 class="modal-title">温馨提示</h4>
+            </div>
+            <div class="modal-body">
+                <p class='text-danger'>
+                    <span class='glyphicon glyphicon-info-sign'></span> 您确定要执行此操作吗？
+                </p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary btn_user">确定</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+    <!-- 表格模板 -->
+    <script type='text/html' id='tpl'>
+        {{ each rows v i }}
+        <tr>
+            <td>{{ (page-1)*size+i+1 }}</td>
+            <td>{{ v.username }}</td>
+            <td>{{ v.mobile }}</td>
+            <td>{{ v.isDelete==0? '禁用':'启用'}}</td>
+            <td data-id='{{ v.id }}'>
+                {{ if v.isDelete==1 }}
+                    <button class="btn btn-danger" type="submit">禁用</button> 
+                {{ else if v.isDelete==0 }}
+                    <button class="btn btn-success" type="submit">启用</button> 
+                {{ /if }}
+            </td>
+        </tr>
+        {{ /each }}
+    </script>
+
+
+    <script src='lib/jquery/jquery.js'></script>
+    <script src='lib/bootstrap/js/bootstrap.js'></script>
+    <script src='lib/bootstrap-validator/js/bootstrapValidator.js'></script>
+    <script src='lib/bootstrap-paginator/bootstrap-paginator.js'></script>
+    <script src='lib/artTemplate/template-web.js'></script>
+    <script src='lib/nprogress/nprogress.js'></script>
+    <script src='js/common.js'></script>
+    <script SRC='js/user.js'></script>
 
 
 </body>
