--- a/public/reverse/index.html
+++ b/public/reverse/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>系统管理-登录</title>
+    <title>系统管理-首页</title>
 </head>
 <body>
     
