--- a/public/reverse/user.html
+++ b/public/reverse/user.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>系统管理-首页</title>
+    <title>系统管理-用户管理</title>
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="lib/nprogress/nprogress.css">
     <link rel="stylesheet" href="css/common.css">
@@ -23,7 +23,7 @@
         <img class='user_img ' src="images/jj.jpg" alt="">
         <p class='user_info mb_30'>超级管理员</p>
         <ul>
-            <li><a href="user.html">
+            <li><a class='now' href="user.html">
                 <span class='glyphicon glyphicon-user'></span>
                 <span>用户管理</span>
             </a></li>
@@ -54,7 +54,7 @@
         <div class="min_box">
             <ol class="breadcrumb">
                 <li><a href="index.html">管理系统</a></li>
-                <li class="active">首页</li>
+                <li class="active">用户管理</li>
             </ol>
             <!-- 主体内容部分 -->
             <div class="lt_mian_content">
@@ -92,8 +92,7 @@
     <script src='lib/jquery/jquery.min.js'></script>
     <script src='lib/bootstrap/js/bootstrap.min.js'></script>
     <script src='lib/nprogress/nprogress.js'></script>
-    <script src='js/common.js'></script>
-    <script src='js/index.js'></script>
+    <script src='js/common.js'></script></a>
 </body>
 
 </html>
