reverse_进度条的添加（进行用户信息校验）

--- a/public/reverse/login.html
+++ b/public/reverse/login.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>后台管理-登录</title>
+  <link rel="stylesheet" href="lib/nprogress/nprogress.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="lib/bootstrap-validator/css/bootstrapValidator.css">
   <link rel="stylesheet" href="css/common.css">
@@ -45,6 +46,7 @@
   </div>
 
   <script src='lib/jquery/jquery.js'></script>
+  <script src='lib/nprogress/nprogress.js'></script>
   <script src='lib/bootstrap/js/bootstrap.min.js'></script>
   <script src='lib/bootstrap-validator/js/bootstrapValidator.js'></script>
   <script src='js/common.js'></script>
