--- a/public/reverse/index.html
+++ b/public/reverse/index.html
@@ -70,7 +70,7 @@
 
 
     <!-- 退出登录的模态框 -->
-    <div class="modal fade" tabindex="-1">
+    <div class="modal fade" tabindex="-1" id='logout_modal'>
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
