--- a/public/reverse/user.html
+++ b/public/reverse/user.html
@@ -52,20 +52,40 @@
             <a href="javascript:;" class='pull-right icon_logout'><span class='glyphicon glyphicon-share'></span></a>
         </div>
         <div class="min_box">
-            <ol class="breadcrumb">
+            <ol class="breadcrumb mb_50">
                 <li><a href="index.html">管理系统</a></li>
                 <li class="active">用户管理</li>
             </ol>
             <!-- 主体内容部分 -->
             <div class="lt_mian_content">
-
+                <table class='table table-bordered table-hover'>
+                    <thead>
+                        <tr>
+                            <td width='10%'>序号</td>
+                            <td width='30%'>用户名</td>
+                            <td width='30%'>手机号</td>
+                            <td width='20%'>状态</td>
+                            <td width='10%'>操作</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- 挖个坑 -->
+                    </tbody>
+                </table>
+                <div class="paginator">
+                    <nav aria-label="...">
+                        <ul class="pagination">
+                            <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                            <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </div>
     </div>
 
-
     <!-- 退出登录的模态框 -->
-    <div class="modal fade" tabindex="-1">
+    <div class="modal fade" tabindex="-1" id='logout_modal'>
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -76,8 +96,7 @@
                 </div>
                 <div class="modal-body">
                     <p class='modal_info text-danger'>
-                        <span class='glyphicon glyphicon-info-sign'></span>
-                        您确定要退出后台管理系统吗？
+                        <span class='glyphicon glyphicon-info-sign'></span> 您确定要退出后台管理系统吗？
                     </p>
                 </div>
                 <div class="modal-footer">
@@ -88,11 +107,56 @@
         </div>
     </div>
 
+    <!-- 用户禁用和启用的模态框 -->
+    <div class="modal fade user_modal" tabindex="-1">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                    <h4 class="modal-title">温馨提示</h4>
+                </div>
+                <div class="modal-body">
+                    <p class='modal_info text-danger'>
+                        <span class='glyphicon glyphicon-info-sign'></span> 您确定要执行此操作吗？
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary btn_sure">确定</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 表格内容模板 -->
+    <script type='text/html' id='tpl'>
+        {{ each rows v i}}
+        <tr>
+            <td>{{ (page-1)*size+i+1 }}</td>
+            <td>{{ v.username }}</td>
+            <td>{{ v.mobile }}</td>
+            <td>{{ v.isDelete==1 ? '正常':'禁用'}}</td>
+            <td data-id='{{ v.id }}'>
+                {{ if v.isDelete == 1 }}
+                <button class="btn btn-danger" type="submit">禁用</button> 
+                {{ else if v.isDelete == 0}}
+                <button class="btn btn-success" type="submit">启用</button> 
+                {{ /if }}
+            </td>
+        </tr>
+        {{ /each }}
+    </script>
+
 
     <script src='lib/jquery/jquery.min.js'></script>
     <script src='lib/bootstrap/js/bootstrap.min.js'></script>
     <script src='lib/nprogress/nprogress.js'></script>
-    <script src='js/common.js'></script></a>
+    <script src='lib/artTemplate/template-web.js'></script>
+    <script src='lib/bootstrap-paginator/bootstrap-paginator.js'></script>
+    <script src='js/common.js'></script>
+    <script src='js/user.js'></script>
+    </a>
 </body>
 
 </html>
