商品管理页完成

--- a/public/admin/second.html
+++ b/public/admin/second.html
@@ -89,7 +89,7 @@
     </div>
 
     <!-- 退出部分的模态框 -->
-    <div class="modal fade" tabindex="-1">
+    <div class="modal fade" tabindex="-1" id='logout_modal'>
         <div class="modal-dialog">
             <div class="modal-content modal-sm">
                 <div class="modal-header">
