--- a/public/admin/product.html
+++ b/public/admin/product.html
@@ -61,16 +61,37 @@
         <div class="lt_main_content">
             <div class="container-fluid">
                 <ol class="breadcrumb">
-                    <li><a href="#">管理系统</a></li>
+                    <li><a href="index.html">管理系统</a></li>
                     <li class="active">商品管理</li>
                 </ol>
+                <button class='btn btn-default mb_20 add_pro'>添加商品</button>
+                <div class="lt_main_table">
+                    <table class="table table-bordered table-hover">
+                        <thead>
+                            <tr>
+                                <td width='10%'>序号</td>
+                                <td width='25%'>商品名称</td>
+                                <td width='25%'>商品描述</td>
+                                <td width='10%'>商品库存</td>
+                                <td width='10%'>商品尺寸</td>
+                                <td width='10%'>商品状态</td>
+                                <td width='10%'>商品操作</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- 挖个坑 -->
+                        </tbody>
+                    </table>
+                    <div class="paginator text-right">
+                        <ul class="pagination"></ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-
     <!-- 退出部分的模态框 -->
-    <div class="modal fade" tabindex="-1">
+    <div class="modal fade" tabindex="-1" id='logout_modal'>
         <div class="modal-dialog">
             <div class="modal-content modal-sm">
                 <div class="modal-header">
@@ -79,8 +100,7 @@
                 </div>
                 <div class="modal-body">
                     <p class='text-danger'>
-                        <span class='glyphicon glyphicon-info-sign'></span>
-                        您确定要退出后台管理系统吗？
+                        <span class='glyphicon glyphicon-info-sign'></span> 您确定要退出后台管理系统吗？
                     </p>
                 </div>
                 <div class="modal-footer">
@@ -90,13 +110,105 @@
             </div>
         </div>
     </div>
-   
 
-    <script src='./lib/jquery/jquery.js'></script>
-    <script src='./lib/bootstrap/js/bootstrap.js'></script>
-    <script src='./lib/bootstrap-validator/js/bootstrapValidator.js'></script>
-    <script src='./lib/nprogress/nprogress.js'></script>
-    <script src='./js/common.js'></script>
+    <!-- 添加商品的模态框 -->
+    <div class="modal fade" tabindex="-1" id='product_modal'>
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    <h4 class="modal-title">添加商品</h4>
+                </div>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+                                    <span class='dropdown_text'>请选择二级分类</span>
+                                    <span class="caret"></span>
+                                </button>
+                                <input type="hidden" class='brand_id' name='brandId'>
+                                <ul class="dropdown-menu">
+                                    <!-- 挖一个坑 -->
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name='proName' autocomplete='off' class="form-control" placeholder="请输入商品的名称">
+                        </div>
+                        <div class="form-group">
+                            <textarea name="proDesc" class="form-control"  placeholder="请输入商品的描述"  rows="3"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name='num' autocomplete='off' class="form-control" placeholder="请输入商品库存">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name='size' autocomplete='off' class="form-control" placeholder="请输入商品尺码(32-46)">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name='oldPrice' autocomplete='off' class="form-control" placeholder="请输入商品的原价">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name='price' autocomplete='off' class="form-control" placeholder="请输入商品的价格">
+                        </div>
+                        <div class="form-group">
+                            <div class='file_box'>
+                                <button class='btn btn-default'>上传图片</button>
+                                <input type="file" name='pic1' id='file_up' data-url="/product/addProductPic" multiple>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="img_box">
+                                <!-- <img src="./images/none.png" width='100' height='100' alt=""> -->
+                                <input type="hidden" name='brandLogo'>
+                            </div>
+                            <input type="hidden" name='statu' value='1'>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="submit" class="btn btn-primary btn_product">添加</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- 表格模板 -->
+    <script type='text/html' id='tpl'>
+        {{ each rows v i}}
+        <tr>
+            <td>{{ (page-1)*size+i+1 }}</td>
+            <td>{{ v.proName }}</td>
+            <td>{{ v.proDesc }}</td>
+            <td>{{ v.num }}</td>
+            <td>{{ v.size }}</td>
+            <td>{{ v.statu==1? '已上架':'已下架'}}</td>
+            <td data-id='{{ v.id }}'>
+                {{ if v.statu==1 }}
+                <button class='btn btn-danger'>下架</button> {{ else if v.statu==0 }}
+                <button class='btn btn-success'>上架</button> {{ /if }}
+            </td>
+        </tr>
+        {{ /each }}
+    </script>
+    <script type='text/html' id='tpl1'>
+        {{ each rows v i }}
+        <li><a data-id='{{ v.id }}' href="#">{{ v.brandName }}</a></li>
+        {{ /each }}
+    </script>
+
+    <script src='lib/jquery/jquery.js'></script>
+    <script src='lib/jquery-fileupload/jquery.ui.widget.js'></script>
+    <script src='lib/jquery-fileupload/jquery.fileupload.js'></script>
+    <script src='lib/bootstrap/js/bootstrap.js'></script>
+    <script src='lib/bootstrap-validator/js/bootstrapValidator.js'></script>
+    <script src='lib/bootstrap-paginator/bootstrap-paginator.js'></script>
+    <script src='lib/artTemplate/template-web.js'></script>
+    <script src='lib/nprogress/nprogress.js'></script>
+    <script src='js/common.js'></script>
+    <script src='js/product.js'></script>
 
 
 </body>
