移动端首搜索页+商品列表页+商品详情页完成

--- a/public/myMobile/index.html
+++ b/public/myMobile/index.html
@@ -16,8 +16,8 @@
 <body>
   <div class="container">
     <div class="lt_top">
-      <a href="#" class='ico_left'><span class='fa fa-home'></span></a>
-      <a href="#" class='ico_right'><span class='fa fa-search'></span></a>
+      <a href="index.jtml" class='ico_left'><span class='fa fa-home'></span></a>
+      <a href="search.html" class='ico_right'><span class='fa fa-search'></span></a>
       <h4>乐淘云购</h4>
     </div>
 
