--- a/public/myMobile/search.html
+++ b/public/myMobile/search.html
@@ -5,40 +5,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable='no'">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>乐淘商城-分类页</title>
+  <title>乐淘商城-搜索页</title>
   <link rel="stylesheet" href="lib/mui/css/mui.css">
   <link rel="stylesheet" href="lib/fa/css/font-awesome.css">
   <link rel="icon" href="./favicon.ico">
   <link rel="stylesheet" href="css/commen.css">
-  <link rel="stylesheet" href="css/category.css">
+  <link rel="stylesheet" href="css/search.css">
 </head>
 
 <body>
   <div class="container">
     <div class="lt_top">
       <a href="javascript:history.go(-1);" class='ico_left'><span class='mui-icon mui-icon-back'></span></a>
-      <a href="search.html" class='ico_right'><span class='fa fa-search'></span></a>
-      <h4>乐淘分类</h4>
+      <h4>乐淘搜索</h4>
     </div>
 
     <div class="lt_main">
-      <div class="lt_left">
-        <div class="mui-scroll-wrapper">
-          <ul class="mui-scroll">
-            <!-- 挖个坑 -->
-          </ul>
-        </div>
-
-
+      <div class="lt_search">
+        <input type="text" placeholder="请输入搜索的商品名称">
+        <button class='mui-btn mui-btn-primary btn_search'>搜索</button>
       </div>
-      <div class="lt_right">
-        <div class="mui-scroll-wrapper">
-          <ul class="mui-scroll">
-            <!-- 挖个坑 -->
-          </ul>
-        </div>
 
+      <div class="lt_history">
+        <!-- 挖个坑 -->
+      
       </div>
+
+
     </div>
 
     <div class="lt_bottom">
@@ -49,7 +42,7 @@
             <p>首页</p>
           </a>
         </li>
-        <li class='now'>
+        <li>
           <a href="category.html">
             <span class='fa fa-bars'></span>
             <p>分类</p>
@@ -70,34 +63,31 @@
       </ul>
     </div>
   </div>
-  <script type='text/html' id='tpl_left'>
-    {{ each rows v i}}
-    <li data-id='{{ v.id }}' class="{{ i==0? 'now':''}}">
-      <a href="javascript:;">{{ v.categoryName }}</a>
-    </li>
-    {{ /each }}
+  <script type='text/html' id='tpl'>
+    {{ if list.length == 0 }}
+    <div>没有历史记录</div>
+    {{/if }}
+    {{ if list.length > 0}}
+    <p class="mui-clearfix">
+      <span class='mui-pull-left'>搜索历史</span>
+      <span class='mui-pull-right fa fa-trash btn_deleteAll'>清空记录</span>
+    </p>
+    <ul>
+      {{ each list v i }}
+      <li>
+        <span class='mui-pull-left'>{{ v }}</span>
+        <span data-id='{{ i }}' class='mui-icon mui-icon-closeempty mui-pull-right btn_delete'></span>
+      </li>
+      {{ /each }}
+    </ul>
+    {{ /if}}
   </script>
-
-  <script type='text/html' id='tpl_right'>
-    {{ if rows.length == 0 }}
-    <p>该分类下暂无商品</p>
-    {{ /if }}
-    {{ each rows v i}}
-    <li>
-      <a href="javascript:;">
-        <img src="{{ v.brandLogo }}" alt="">
-        <p>{{ v.brandName }}</p>
-      </a>
-    </li>
-    {{ /each }}
-  </script>
-
 
   <script src='lib/zepto/zepto.min.js'></script>
   <script src='lib/artTemplate/template-web.js'></script>
   <script src='lib/mui/js/mui.js'></script>
   <script src='js/commen.js'></script>
-  <script src='js/category.js'></script>
+  <script src='js/search.js'></script>
 
 </body>
 
