乐淘移动端购物车+登录+注册+会员页面完成

--- a/public/myMobile/login.html
+++ b/public/myMobile/login.html
@@ -5,33 +5,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable='no'">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>乐淘商城-搜索页</title>
+  <title>乐淘商城-首页</title>
   <link rel="stylesheet" href="lib/mui/css/mui.css">
   <link rel="stylesheet" href="lib/fa/css/font-awesome.css">
   <link rel="icon" href="./favicon.ico">
   <link rel="stylesheet" href="css/commen.css">
-  <link rel="stylesheet" href="css/search.css">
+  <link rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
   <div class="container">
     <div class="lt_top">
-      <a href="javascript:history.go(-1);" class='ico_left'><span class='mui-icon mui-icon-back'></span></a>
-      <h4>乐淘搜索</h4>
+      <a href="index.jtml" class='ico_left'><span class='fa fa-home'></span></a>
+      <a href="search.html" class='ico_right'><span class='fa fa-search'></span></a>
+      <h4>登录</h4>
     </div>
 
     <div class="lt_main">
-      <div class="lt_search">
-        <input type="text" placeholder="请输入搜索的商品名称">
-        <button class='mui-btn mui-btn-primary btn_search'>搜索</button>
-      </div>
-
-      <div class="lt_history">
-        <!-- 挖个坑 -->
-      
-      </div>
-
-
+      <form class="mui-input-group">
+        <div class="mui-input-row">
+          <label>用户名</label>
+          <input type="text" name='username' class="mui-input-clear" placeholder="请输入用户名">
+        </div>
+        <div class="mui-input-row">
+          <label>密码</label>
+          <input type="password" name='password' class="mui-input-password" placeholder="请输入密码">
+        </div>
+        <div class="mui-button-row">
+          <button type="button" class="mui-btn mui-btn-primary btn_login">登录</button>
+          <button type="reset" class="mui-btn mui-btn-danger">重置</button>
+        </div>
+      </form>
+      <p class='free'><a href="register.html">免费注册</a></p>
     </div>
 
     <div class="lt_bottom">
@@ -54,7 +59,7 @@
             <p>购物车</p>
           </a>
         </li>
-        <li>
+        <li class='now'>
           <a href="user.html">
             <span class='fa fa-user'></span>
             <p>会员中心</p>
@@ -63,31 +68,13 @@
       </ul>
     </div>
   </div>
-  <script type='text/html' id='tpl'>
-    {{ if list.length == 0 }}
-    <div>没有历史记录</div>
-    {{/if }}
-    {{ if list.length > 0}}
-    <p class="mui-clearfix">
-      <span class='mui-pull-left'>搜索历史</span>
-      <span class='mui-pull-right fa fa-trash btn_deleteAll'>清空记录</span>
-    </p>
-    <ul>
-      {{ each list v i }}
-      <li>
-        <a href='productList.html?key={{ v }}' class='mui-pull-left'>{{ v }}</a>
-        <span data-id='{{ i }}' class='mui-icon mui-icon-closeempty mui-pull-right btn_delete'></span>
-      </li>
-      {{ /each }}
-    </ul>
-    {{ /if}}
-  </script>
+
 
   <script src='lib/zepto/zepto.min.js'></script>
   <script src='lib/artTemplate/template-web.js'></script>
   <script src='lib/mui/js/mui.js'></script>
   <script src='js/commen.js'></script>
-  <script src='js/search.js'></script>
+  <script src='js/login.js'></script>
 
 </body>
 
