--- a/public/myMobile/product.html
+++ b/public/myMobile/product.html
@@ -34,9 +34,9 @@
     </div>
     
     <div class="lt_bottom lt_cart">
-      <a href="#" class='mui-btn mui-btn-link mui-pull-left'>去购物车</a>
+      <a href="cart.html" class='mui-btn mui-btn-link mui-pull-left'>去购物车</a>
       <div class='mui-pull-right'>
-        <button class='mui-btn mui-btn-danger'>加入购物车</button>
+        <button class='mui-btn mui-btn-danger btn_addCart'>加入购物车</button>
         <button class='mui-btn mui-btn-warning'>立即购买</button>
       </div>
     </div>
@@ -85,7 +85,7 @@
                 <div class="mui-numbox" data-numbox-step='' data-numbox-min='1' data-numbox-max='1000'>
                   <!-- "-"按钮，点击可减小当前数值 -->
                   <button class="mui-btn mui-numbox-btn-minus" type="button">-</button>
-                  <input class="mui-numbox-input" type="number" />
+                  <input class="mui-numbox-input inp_num" type="number" />
                   <!-- "+"按钮，点击可增大当前数值 -->
                   <button class="mui-btn mui-numbox-btn-plus" type="button">+</button>
                 </div>
