--- a/public/myMobile/user.html
+++ b/public/myMobile/user.html
@@ -5,33 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable='no'">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>乐淘商城-搜索页</title>
+  <title>乐淘商城-会员中心</title>
   <link rel="stylesheet" href="lib/mui/css/mui.css">
   <link rel="stylesheet" href="lib/fa/css/font-awesome.css">
   <link rel="icon" href="./favicon.ico">
   <link rel="stylesheet" href="css/commen.css">
-  <link rel="stylesheet" href="css/search.css">
+  <link rel="stylesheet" href="css/user.css">
 </head>
 
 <body>
   <div class="container">
     <div class="lt_top">
       <a href="javascript:history.go(-1);" class='ico_left'><span class='mui-icon mui-icon-back'></span></a>
-      <h4>乐淘搜索</h4>
+      <h4>会员中心</h4>
     </div>
 
     <div class="lt_main">
-      <div class="lt_search">
-        <input type="text" placeholder="请输入搜索的商品名称">
-        <button class='mui-btn mui-btn-primary btn_search'>搜索</button>
-      </div>
-
-      <div class="lt_history">
-        <!-- 挖个坑 -->
-      
-      </div>
-
-
+      <ul class="mui-table-view">
+        <li class="mui-table-view-cell mui-media">
+          <a href="javascript:;">
+              <img class="mui-media-object mui-pull-left" src="images/user.jpg">
+              <div class="mui-media-body user_info">
+                <!-- 挖个坑 -->
+              </div>
+            </a>
+        </li>
+        <li class="mui-table-view-cell">
+          <a class="mui-navigate-right">账户与安全</a>
+        </li>
+        <li class="mui-table-view-cell">
+          <a href='cart.html' class="mui-navigate-right">我的购物车</a>
+        </li>
+        <li class="mui-table-view-cell">
+          <a class="mui-navigate-right">收货地址管理</a>
+        </li>
+      </ul>
+      <div class='btn_logout'><a class='mui-btn mui-btn-pramary'>退出</a></div>
     </div>
 
     <div class="lt_bottom">
@@ -54,7 +63,7 @@
             <p>购物车</p>
           </a>
         </li>
-        <li>
+        <li class='now'>
           <a href="user.html">
             <span class='fa fa-user'></span>
             <p>会员中心</p>
@@ -64,30 +73,16 @@
     </div>
   </div>
   <script type='text/html' id='tpl'>
-    {{ if list.length == 0 }}
-    <div>没有历史记录</div>
-    {{/if }}
-    {{ if list.length > 0}}
-    <p class="mui-clearfix">
-      <span class='mui-pull-left'>搜索历史</span>
-      <span class='mui-pull-right fa fa-trash btn_deleteAll'>清空记录</span>
-    </p>
-    <ul>
-      {{ each list v i }}
-      <li>
-        <a href='productList.html?key={{ v }}' class='mui-pull-left'>{{ v }}</a>
-        <span data-id='{{ i }}' class='mui-icon mui-icon-closeempty mui-pull-right btn_delete'></span>
-      </li>
-      {{ /each }}
-    </ul>
-    {{ /if}}
+    <span>{{ username }}</span>
+    <p>绑定手机号：{{ mobile }}</p>
   </script>
+
 
   <script src='lib/zepto/zepto.min.js'></script>
   <script src='lib/artTemplate/template-web.js'></script>
   <script src='lib/mui/js/mui.js'></script>
   <script src='js/commen.js'></script>
-  <script src='js/search.js'></script>
+  <script src='js/user.js'></script>
 
 </body>
 
